--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 @use 'variables' as *;
+@use 'media-queries';
 
 * {
     margin: 0;
@@ -21,8 +22,11 @@ body{
 }
 
 .bottom-page-content{
-    flex-basis: 200px;
-    background-color: yellowgreen;
+    height: 90px;
+    background-color: #282828;
+    display: flex;
+    justify-content: space-between;
+    padding: 1.3rem 0.9rem;
 }
 
 .sidebar {
@@ -31,6 +35,8 @@ body{
     display: flex;
     flex-direction: column;
     background-color: black;
+    gap: 2rem;
+    padding: 1rem 1.5rem;
 }
   
 .main {
@@ -72,13 +78,13 @@ body{
 
 .card-title {
     color: white;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
-    padding: .6rem 0rem;
+    padding: .7rem 0rem;
 }
 
 .card-subtitle {
-    font-size: 13px;
+    font-size: 11px;
     font-weight: bold;
     color: #65686d;
 }
@@ -86,14 +92,15 @@ body{
 h2 {
     font-size: 1.9rem;
     color: white;
-    padding-bottom: 1.4rem;
+    padding-top: 2rem;
+    padding-bottom: 0.7rem;
 }
 
 h4 {
     font-size: 13px;
     font-weight: bold;
     color: #65686d;
-    padding-bottom: 1rem;
+    padding-bottom: 1.7rem;
 }
 
 .img-round {
@@ -102,6 +109,7 @@ h4 {
 
 .main-nav{
     background-color: #141922;
+    padding-top: 1rem;
 }
 
 .main-nav ul{
@@ -119,6 +127,23 @@ h4 {
     font-weight: bold;
     font-size: 14px;
     text-decoration: none;
+}
+
+.main-nav ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.underline {
+    height: 2px;
+    width: 35%;
+    background-color: green;
+    margin-top: 4px;
+}
+
+.upgrade-container{
+    padding: 1.5rem 1.2rem 1.5rem 0rem;
 }
 
 .upgrade-container button {
@@ -143,6 +168,12 @@ h4 {
     height: 100%;
 }
 
+.side-nav ul {
+    display: flex;
+    flex-direction: column;
+    gap: .7rem;
+}
+
 .side-nav ul li {
     display: flex;
     align-items: center;
@@ -158,7 +189,7 @@ h4 {
 .side-playlist {
     display: flex;
     flex-direction: column;
-    gap: .7rem;
+    gap: 1rem;
     flex-grow: 1;
     overflow: auto;
 }
@@ -184,7 +215,7 @@ h4 {
 .nav-playlist {
     display: flex;
     flex-direction: column;
-    gap: .6rem;
+    gap: 1rem;
     flex-grow: 1;
     overflow: auto;
 }
@@ -227,7 +258,144 @@ h4 {
 }
 
 .line {
+    margin-top: 0.7rem;
+    margin-bottom: 0.7rem;
     width: 100%;
     border-top: 1px solid #65686d;
 }
 
+//small sidebar
+.sm-sidebar  {
+    width: 50px;
+    background-color: black;
+    padding: .4rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.bot-imgs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+}
+
+.top-imgs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+}
+
+.bot-imgs svg{
+    color: #65686d;
+    height: 16px;
+}
+
+.bot-imgs img {
+    height: 23px;
+    aspect-ratio: 1/1;
+    background-color: #65686d;
+    border-radius: 50%;
+}
+
+//bottom part
+
+.song-container {
+    align-items: center;
+    display: flex;
+    gap: 1rem;
+    height: 100%;
+}
+
+.song-container i {
+    color: #878787;
+}
+
+.song-info .song-title{
+    color: white;
+    font-size: 0.9rem;
+    font-weight: bold;
+}
+
+.song-info .song-autor{
+    color: #5a5a5a;
+    font-size: 0.75rem;
+    font-weight: bold;
+}
+
+.song-container img{
+    height: 100%;
+}
+
+.song-player-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.icons {
+    display: flex;
+    gap: 1.2rem;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    color: white;
+    padding-bottom: 0.5rem;
+}
+
+.icons i:nth-child(3) {
+    font-size: 2rem;
+}
+
+.duration-info {
+    display: flex;
+    align-items: center;
+    gap: 1.3rem;
+}
+
+.duration-info span {
+    color: white;
+    font-size: .7rem;
+    font-weight: bold;
+}
+
+.duration-info .slider-container {
+    height: 4px;
+    width: 425px;
+    border-radius: 15px;
+    background-color: #5a5a5a;
+}
+
+.duration-info .slider-container .slider-bar{
+    height: 100%;
+    width: 100px;
+    border-radius: 15px;
+    background-color: #c1c1c1;
+}
+
+.song-volume-interactables {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.song-volume-interactables i {
+    color: white;
+    font-size: 0.8rem;
+}
+
+.song-volume-interactables .slider-container {
+    height: 4px;
+    width: 115px;
+    border-radius: 15px;
+    background-color: #5a5a5a;
+}
+
+.song-volume-interactables .slider-container .slider-bar{
+    height: 100%;
+    width: 30px;
+    border-radius: 15px;
+    background-color: #c1c1c1;
+}
