--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,401 +1,5 @@
 @use 'variables' as *;
+
+@use 'page-style';
+
 @use 'media-queries';
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-.top-page-content{
-    flex-grow: 1;
-    display: flex;
-    overflow: auto;
-}
-
-.bottom-page-content{
-    height: 90px;
-    background-color: #282828;
-    display: flex;
-    justify-content: space-between;
-    padding: 1.3rem 0.9rem;
-}
-
-.sidebar {
-    flex-basis: 230px;
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    background-color: black;
-    gap: 2rem;
-    padding: 1rem 1.5rem;
-}
-  
-.main {
-    flex-grow: 1;
-    overflow: auto;
-    display: flex;
-    flex-direction: column;
-}
-
-.main .upgrade-container {
-    display: flex;
-    justify-content: flex-end;
-    background-color: #080b12;
-}
-
-.main .main-info-container {
-    flex-grow: 1;
-    background-color: #141922;
-    padding: 0rem 1.3rem;
-    overflow: auto;
-}
-
-.cards-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: $col-gap;
-}
-
-.card{
-    $space-nogap: calc(100% - ($col-gap * ($column-number - 1)));
-    width: calc($space-nogap / $column-number);
-    text-align: center;
-}
-
-.card-img-container img {
-    width: 100%;
-    aspect-ratio: 1/1;
-}
-
-.card-title {
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-    padding: .7rem 0rem;
-}
-
-.card-subtitle {
-    font-size: 11px;
-    font-weight: bold;
-    color: #65686d;
-}
-
-h2 {
-    font-size: 1.9rem;
-    color: white;
-    padding-top: 2rem;
-    padding-bottom: 0.7rem;
-}
-
-h4 {
-    font-size: 13px;
-    font-weight: bold;
-    color: #65686d;
-    padding-bottom: 1.7rem;
-}
-
-.img-round {
-    border-radius: 50%;
-}
-
-.main-nav{
-    background-color: #141922;
-    padding-top: 1rem;
-}
-
-.main-nav ul{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    list-style: none;
-    text-align: center;
-    gap: 1rem;
-}
-
-.main-nav ul li a{
-    color: #65686d;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 14px;
-    text-decoration: none;
-}
-
-.main-nav ul li {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.underline {
-    height: 2px;
-    width: 35%;
-    background-color: green;
-    margin-top: 4px;
-}
-
-.upgrade-container{
-    padding: 1.5rem 1.2rem 1.5rem 0rem;
-}
-
-.upgrade-container button {
-    color: white;
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 12px;
-    border: 2px solid white;
-    background-color: #080b12;
-    border-radius: 20px;
-    padding: 10px 30px;
-}
-
-
-//sidebar
-
-.side-logo-container {
-    height: 50px;
-}
-
-.side-logo-container img {
-    height: 100%;
-}
-
-.side-nav ul {
-    display: flex;
-    flex-direction: column;
-    gap: .7rem;
-}
-
-.side-nav ul li {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    font-size: 14px;
-    color: white;
-}
-
-.side-nav ul li img{
-    height: 25px;
-}
-
-.side-playlist {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    flex-grow: 1;
-    overflow: auto;
-}
-
-.playlist-title {
-    font-size: 1rem;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: white;
-}
-
-.create-playlist {
-    color: #65686d;
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.create-playlist i {
-    font-size: 2rem;
-}
-
-.nav-playlist {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    flex-grow: 1;
-    overflow: auto;
-}
-
-.nav-playlist li{
-    font-size: 15px;
-    color: #65686d;
-}
-
-.side-bottom-info {
-    margin-top: auto;
-}
-
-.install-app, .profile {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
-
-.install-app svg {
-    height: 15px;
-    color: #65686d;
-}
-
-.install-app span {
-    font-size: .8rem;
-    color: #65686d;
-}
-
-.profile img {
-    height: 23px;
-    aspect-ratio: 1/1;
-    background-color: #65686d;
-    border-radius: 50%;
-}
-
-.profile span {
-    font-size: 0.9;
-    color: white;
-}
-
-.line {
-    margin-top: 0.7rem;
-    margin-bottom: 0.7rem;
-    width: 100%;
-    border-top: 1px solid #65686d;
-}
-
-//small sidebar
-.sm-sidebar  {
-    width: 50px;
-    background-color: black;
-    padding: .4rem;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.bot-imgs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-}
-
-.top-imgs {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: .5rem;
-}
-
-.bot-imgs svg{
-    color: #65686d;
-    height: 16px;
-}
-
-.bot-imgs img {
-    height: 23px;
-    aspect-ratio: 1/1;
-    background-color: #65686d;
-    border-radius: 50%;
-}
-
-//bottom part
-
-.song-container {
-    align-items: center;
-    display: flex;
-    gap: 1rem;
-    height: 100%;
-}
-
-.song-container i {
-    color: #878787;
-}
-
-.song-info .song-title{
-    color: white;
-    font-size: 0.9rem;
-    font-weight: bold;
-}
-
-.song-info .song-autor{
-    color: #5a5a5a;
-    font-size: 0.75rem;
-    font-weight: bold;
-}
-
-.song-container img{
-    height: 100%;
-}
-
-.song-player-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.icons {
-    display: flex;
-    gap: 1.2rem;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.2rem;
-    color: white;
-    padding-bottom: 0.5rem;
-}
-
-.icons i:nth-child(3) {
-    font-size: 2rem;
-}
-
-.duration-info {
-    display: flex;
-    align-items: center;
-    gap: 1.3rem;
-}
-
-.duration-info span {
-    color: white;
-    font-size: .7rem;
-    font-weight: bold;
-}
-
-.duration-info .slider-container {
-    height: 4px;
-    width: 425px;
-    border-radius: 15px;
-    background-color: #5a5a5a;
-}
-
-.duration-info .slider-container .slider-bar{
-    height: 100%;
-    width: 100px;
-    border-radius: 15px;
-    background-color: #c1c1c1;
-}
-
-.song-volume-interactables {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-.song-volume-interactables i {
-    color: white;
-    font-size: 0.8rem;
-}
-
-.song-volume-interactables .slider-container {
-    height: 4px;
-    width: 115px;
-    border-radius: 15px;
-    background-color: #5a5a5a;
-}
-
-.song-volume-interactables .slider-container .slider-bar{
-    height: 100%;
-    width: 30px;
-    border-radius: 15px;
-    background-color: #c1c1c1;
-}
