--- a/css/style.css
+++ b/css/style.css
@@ -115,13 +115,15 @@ h4 {
   list-style: none;
   text-align: center;
   gap: 1rem;
+  margin-right: 0.4rem;
+  margin-left: 0.4rem;
 }
 
 .main-nav ul li a {
   color: #65686d;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 15px;
   text-decoration: none;
 }
 
@@ -295,12 +297,14 @@ h4 {
 .song-container {
   align-items: center;
   display: flex;
-  gap: 1rem;
+  gap: 0.8rem;
   height: 100%;
 }
 
-.song-container i {
+.song-container .song-icons {
   color: #878787;
+  display: flex;
+  gap: 0.8rem;
 }
 
 .song-info .song-title {
@@ -342,7 +346,7 @@ h4 {
 .duration-info {
   display: flex;
   align-items: center;
-  gap: 1.3rem;
+  gap: 0.5rem;
 }
 
 .duration-info span {
@@ -353,7 +357,7 @@ h4 {
 
 .duration-info .slider-container {
   height: 4px;
-  width: 425px;
+  width: 350px;
   border-radius: 15px;
   background-color: #5a5a5a;
 }
@@ -368,7 +372,7 @@ h4 {
 .song-volume-interactables {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.8rem;
 }
 
 .song-volume-interactables i {
@@ -378,7 +382,7 @@ h4 {
 
 .song-volume-interactables .slider-container {
   height: 4px;
-  width: 115px;
+  width: 100px;
   border-radius: 15px;
   background-color: #5a5a5a;
 }
@@ -388,4 +392,79 @@ h4 {
   width: 30px;
   border-radius: 15px;
   background-color: #c1c1c1;
+}
+
+@media (max-width: 878px) {
+  .sidebar {
+    display: flex;
+  }
+  .sm-sidebar {
+    display: none;
+  }
+  .cards-container .card {
+    width: calc((100% - 3rem) / 4);
+    text-align: center;
+  }
+  .song-volume-interactables {
+    gap: 0.5rem;
+  }
+  .song-volume-interactables .slider-container {
+    width: 90px;
+  }
+  .song-container {
+    gap: 0.6rem;
+  }
+  .song-container .song-icons {
+    gap: 0.4rem;
+  }
+  .duration-info .slider-container {
+    width: 200px;
+  }
+  .song-volume-interactables .slider-container {
+    width: 80px;
+  }
+}
+@media (max-width: 639px) {
+  .sidebar {
+    display: flex;
+  }
+  .sm-sidebar {
+    display: none;
+  }
+  .cards-container .card {
+    width: calc((100% - 1rem) / 2);
+    text-align: center;
+  }
+  .duration-info .slider-container {
+    width: 150px;
+  }
+  .song-container .song-icons {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+}
+@media (max-width: 552px) {
+  .sidebar {
+    display: none;
+  }
+  .sm-sidebar {
+    display: flex;
+  }
+  .cards-container .card {
+    width: calc((100% - 1rem) / 2);
+    text-align: center;
+  }
+  .duration-info .slider-container {
+    width: 110px;
+  }
+  .song-volume-interactables .slider-container {
+    width: 65px;
+  }
+  .song-info {
+    width: 54px;
+  }
+  .song-container .song-icons {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
 }
